--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "watch": {
-    "build": "src/**"
+    "build": "src/**/*.*"
   },
   "scripts": {
     "build": "rollup -c",
     "start": "npm run build && node scripts/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npm run start & npm-watch"
+    "watch": "npm-watch"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,9 @@
   "devDependencies": {
     "buble": "0.14.2",
     "express": "4.14.0",
+    "npm-watch": "0.1.6",
     "rollup": "0.36.3",
+    "rollup-plugin-alias": "1.2.0",
     "rollup-plugin-buble": "0.14.0",
     "rollup-plugin-commonjs": "5.0.5",
     "rollup-plugin-node-resolve": "2.0.0",
